[project]
name = "x7x-hack-bot"
version = "1.0.0"
description = "X7x Hacking Telegram Bot - Webhook Version"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "X7x", email = "x7x@hacker.com"}
]
dependencies = [
    "flask==3.0.3",
    "requests==2.32.3",
    "pillow==10.4.0",
    "qrcode==7.4.2",
    "pyzbar==0.1.9",
    "holehe>=1.0.0,<2.0.0",
    "python-dotenv==1.0.1",
    "gunicorn==22.0.0",
    "werkzeug==3.0.3"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "black==24.8.0",
    "flake==7.1.1"
]

[tool.vercel]
entrypoint = "app:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["."]